--- a/frontend/vietau/web/vietau/css/custom.scss
+++ b/frontend/vietau/web/vietau/css/custom.scss
@@ -11,6 +11,11 @@ $red: #de2d2b;
 .sec-title h2 span {
   color: $red;
 }
+//hell
+.lang-icon {
+  align-items: center;
+  justify-content: space-between
+}
 
 .main-menu .navigation > li > a {
   font-size: 14px;
