--- a/frontend/vietau/web/vietau/css/custom.css
+++ b/frontend/vietau/web/vietau/css/custom.css
@@ -158,4 +158,9 @@
 .main-menu .navigation > li > ul > li:hover > a::before {
   text-shadow: 8px 0 #21409a, -8px 0 #21409a; }
 
+.call p {
+  margin: 5px 0; }
+  .call p span {
+    font-size: 20px; }
+
 /*# sourceMappingURL=custom.css.map */
