--- a/frontend/vietau/web/vietau/css/custom.css
+++ b/frontend/vietau/web/vietau/css/custom.css
@@ -161,6 +161,9 @@
 .main-menu .navigation > li > ul > li:hover > a::before {
   text-shadow: 8px 0 #21409a, -8px 0 #21409a; }
 
+.contact-page-section .contact-info-boxed {
+  background: #21409a; }
+
 .team-block .inner-box .image .social-box li a:hover {
   color: #21409a; }
 
