--- a/frontend/vietau/web/vietau/css/custom.scss
+++ b/frontend/vietau/web/vietau/css/custom.scss
@@ -180,7 +180,7 @@ $red: #de2d2b;
   text-shadow: 8px 0 $default, -8px 0 $default;
 }
 
-.contact-page-section .contact-info-boxed {
+.contact-page-section .contact-info-boxed, .scroll-to-top:hover {
   background: $default;
 }
 
