--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -26,8 +26,8 @@ nav a {
     border-radius: 100%;
     -moz-border-radius: 100%;
     -webkit-border-radius: 100%;
-    font-size: 15px;
-    font-weight: bold;
+    font-size: 12px;
+    font-weight: 500;
     justify-content: center; }
 
 .page-pagination {
