--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -36,8 +36,8 @@ nav {
       border-radius: 100%;
       -moz-border-radius: 100%;
       -webkit-border-radius: 100%;
-      font-size: 15px;
-      font-weight: bold;
+      font-size: 12px;
+      font-weight: 500;
       justify-content: center;
     }
   }
