--- a/backend/web/css/customize.css
+++ b/backend/web/css/customize.css
@@ -18,6 +18,9 @@
   height: 500px;
   max-height: calc(100% - 120px); }
 
+.sticky-top {
+  z-index: 99; }
+
 .sticky-sidebar {
   position: sticky;
   top: 3.2rem; }
