--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -1,10 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Charmonman:wght@700&display=swap');
+$pink: #F16687;
+$pink-2: #F599B1;
+$yellow: #EEA731;
+$yellow-2: #FFCD5B;
+
+$bg-green2: #E4F0D5;
+$bg-green1: #F2F7E8;
+
+$bg-blue: #D5E2E9;
+$bg-yellow: #F3F5CB;
+$bg-green: #E4F0D5;
+$bg-purple: #E1E9F6;
 
 .tra-header {
   font-family: 'Charmonman', cursive !important;
 }
-
+.bg-color-09,.btn-color-02{
+  background: $pink;
+}
+.ico-cart{
+  color: $pink;
+}
 html, body, a, p, h1, h2, h3, h4, h5, h6 {
   font-family: 'Baloo Da 2', cursive;
 }
