--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -1,27 +1,109 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Charmonman:wght@700&display=swap');
+
 $pink: #F16687;
 $pink-2: #F599B1;
 $yellow: #EEA731;
 $yellow-2: #FFCD5B;
-
-$bg-green2: #E4F0D5;
-$bg-green1: #F2F7E8;
+$purple: #883F71;
+$bg-green: #367765;
+$bg-green1: #E4F0D5;
+$bg-green2: #f2f7e8;
 
 $bg-blue: #D5E2E9;
-$bg-yellow: #F3F5CB;
-$bg-green: #E4F0D5;
+$bg-yellow: #f3f5cb;
 $bg-purple: #E1E9F6;
-
-.tra-header {
-  font-family: 'Charmonman', cursive !important;
-}
-.bg-color-09,.btn-color-02{
-  background: $pink;
-}
-.ico-cart{
+.wsmenu > .wsmenu-list > li > ul.sub-menu > li > a:before, .wsmenu > .wsmenu-list > li > .wsmegamenu .link-list li a:before, .wsmenu > .wsmenu-list > li > .wsmegamenu.halfmenu .link-list > li > a:before{
   color: $pink;
 }
+.tra-header {
+  font-family: 'Charmonman', cursive !important;
+  color: $yellow;
+}
+
+.txt-color-01, .txt-color-05 {
+  color: $purple;
+
+  span, a {
+    color: $purple;
+
+  }
+}
+
+.txt-color-06, .txt-color-03 {
+  color: $pink-2;
+
+  a {
+    color: $purple;
+  }
+}
+
+.stars-rating i {
+  color: $pink;
+}
+
+.btn-tra-01 {
+  border-color: $pink !important;
+  color: $pink !important;
+
+  &.color-02-hover {
+    &:hover {
+      background: $pink;
+    }
+  }
+}
+
+.btn-color-02, .scroll .btn-color-02, .white-color .btn-color-02, .color-02-hover:hover, .scroll .color-02-hover:hover, .white-color .color-02-hover:hover {
+  background-color: $pink;
+  border-color: $pink;
+}
+
+.owl-theme .owl-dots .owl-dot {
+  &.active {
+    span {
+      background: $yellow;
+    }
+  }
+
+  span {
+    border: 2px solid $yellow;
+
+    &:hover {
+      background: $yellow;
+    }
+  }
+}
+
+#scrollUp {
+  background-color: $bg-green1;
+
+  &:hover {
+    background-color: $bg-green;
+  }
+}
+
+.bg-color-02 {
+  background: $bg-blue;
+}
+
+.bg-color-09, .btn-color-02 {
+  background-color: $pink;
+  border-color: $pink !important;
+
+  &.color-01-hover {
+    &:hover {
+      background-color: $pink-2;
+    }
+  }
+}
+
+.ico-cart {
+  i, span {
+    color: $pink;
+  }
+}
+
+
 html, body, a, p, h1, h2, h3, h4, h5, h6 {
   font-family: 'Baloo Da 2', cursive;
 }
