--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -62,10 +62,12 @@ $bg-purple: #E1E9F6;
 
 .tra-header {
   font-family: 'Charmonman', cursive !important;
-  color: $yellow;
+  color: $bg-green;
 }
-
-.txt-color-01, .txt-color-05 {
+.txt-color-01{
+  color: $pink;
+}
+.txt-color-05 {
   color: $purple;
 
   span, a {
