--- a/frontend/usvn/web/usvn/css/custom.css
+++ b/frontend/usvn/web/usvn/css/custom.css
@@ -80,5 +80,10 @@
 
 .service-item .service__content {
   padding: 15px; }
+  .service-item .service__content .service__icon img {
+    max-height: 115px;
+    display: flex;
+    object-fit: cover;
+    overflow: hidden; }
 
 /*# sourceMappingURL=custom.css.map */
