--- a/frontend/brouchure/web/css/custom.scss
+++ b/frontend/brouchure/web/css/custom.scss
@@ -1,3 +1,8 @@
-.featured-icon-box{
+.featured-icon-box {
   width: 100%;
+}
+
+.footer .footer-logo img, .site-branding img {
+  width: 120px;
+  max-height: 100%;
 }
