--- a/frontend/brouchure/web/css/custom.css
+++ b/frontend/brouchure/web/css/custom.css
@@ -1,4 +1,8 @@
 .featured-icon-box {
   width: 100%; }
 
+.footer .footer-logo img, .site-branding img {
+  width: 120px;
+  max-height: 100%; }
+
 /*# sourceMappingURL=custom.css.map */
