--- a/frontend/usvn/web/usvn/css/custom.scss
+++ b/frontend/usvn/web/usvn/css/custom.scss
@@ -1,6 +1,6 @@
 .language {
   .dropdown-toggle {
-    display: flex !important;
+    //display: flex !important;
 
     &:after {
       right: -25px;
