--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -7,33 +7,33 @@
   color: #636363; }
 
 .fancy-spinner .ring:nth-child(1) {
-  border-left-color: #F16687 !important;
-  border-right-color: #F16687 !important; }
+  border-left-color: #E44126 !important;
+  border-right-color: #E44126 !important; }
 .fancy-spinner .ring:nth-child(2) {
-  border-top-color: #F16687 !important;
-  border-bottom-color: #F16687 !important; }
+  border-top-color: #E44126 !important;
+  border-bottom-color: #E44126 !important; }
 .fancy-spinner .dot {
-  background: #F16687 !important; }
+  background: #E44126 !important; }
 
 .ant-pagination-item-active {
-  border-color: #F16687;
-  color: #F16687; }
+  border-color: #E44126;
+  color: #E44126; }
   .ant-pagination-item-active a {
-    color: #F16687; }
+    color: #E44126; }
 
 .ant-pagination-item-active:focus-visible, .ant-pagination-item-active:hover {
-  border-color: #F16687; }
+  border-color: #E44126; }
 
 .ant-input-number:focus, .ant-input-number-focused, .ant-input-number:hover {
   border-color: #F2F7E8;
   box-shadow: 0 0 0 2px rgba(54, 119, 101, 0.2); }
 
 .ant-pagination-item-active:focus-visible a, .ant-pagination-item-active:hover a {
-  color: #F16687; }
+  color: #E44126; }
 
 .ant-btn-dangerous {
-  color: #F16687;
-  border-color: #F16687; }
+  color: #E44126;
+  border-color: #E44126; }
 
 .tra-header {
   font-family: 'Charmonman', cursive !important;
@@ -79,8 +79,8 @@
   #scrollUp:hover {
     background-color: #F2F7E8; }
 
-.bg-color-02 {
-  background: #E2EBF7; }
+.bg-lam {
+  background: #D6E6EE; }
 
 .bg-color-09, .btn-color-02 {
   background-color: #F16687;
@@ -190,9 +190,152 @@ nav a {
 
 .bg-img03 {
   background: url("../img/bg/bg.png") center center no-repeat, url("../img/bg/la1.png") top right no-repeat, url("../img/bg/la2.png") bottom left no-repeat;
-  background-size: cover, contain, contain; }
+  background-size: cover, 30%, 30%;
+  background-blend-mode: overlay; }
 
-.bg-green {
-  background-color: #F2F7E8; }
+@media (max-width: 467px) {
+  .img-absolute img {
+    position: relative !important;
+    width: 100% !important;
+    left: 0 !important; }
+
+  .list-item {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2; }
+    .list-item.column-2 {
+      -webkit-column-count: 2;
+      -moz-column-count: 2;
+      column-count: 2; } }
+.product-row .product-title {
+  font-size: 16px; }
+.product-row .title-cat {
+  font-size: 36px; }
+  .product-row .title-cat.tim a {
+    color: #50254A; }
+  .product-row .title-cat.do a {
+    color: #E44126; }
+  .product-row .title-cat.xanh a {
+    color: #367766; }
+.product-row .list-item {
+  width: 100%;
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+  column-count: 3; }
+  .product-row .list-item.column-2 {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2; }
+  .product-row .list-item li {
+    margin-bottom: 10px; }
+    .product-row .list-item li a {
+      font-weight: bold; }
+
+.xanh {
+  color: #367766; }
+
+.tim {
+  color: #50254A; }
+
+.bg-green2 {
+  background: #E4F1D4; }
+  .bg-green2 .img-absolute {
+    position: relative; }
+    .bg-green2 .img-absolute img {
+      position: absolute;
+      max-width: 600px;
+      left: -30%; }
+
+.do {
+  color: #E44126; }
+
+.ml-1 {
+  margin-left: 10px; }
+
+.pt-5 {
+  padding-top: 50px; }
+
+.ml-2 {
+  margin-left: 10px; }
+
+.align-top {
+  align-items: flex-start; }
+
+.row-bg {
+  position: relative;
+  padding: 40px;
+  margin: 40px 0px; }
+  .row-bg.bg-tim.bg-left:before {
+    left: -5%; }
+  .row-bg.bg-tim.bg-right:before {
+    right: 0; }
+  .row-bg.bg-tim:before {
+    content: '';
+    background-color: #E1E9F6;
+    position: absolute;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    z-index: -1; }
+  .row-bg.bg-xanh.bg-left:before {
+    left: -5%; }
+  .row-bg.bg-xanh.bg-right:before {
+    right: -5%; }
+  .row-bg.bg-xanh:before {
+    content: '';
+    background-color: #F2F7E8;
+    position: absolute;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    z-index: -1; }
+  .row-bg.bg-do.bg-left:before {
+    left: -5%; }
+  .row-bg.bg-do.bg-right:before {
+    right: -5%; }
+  .row-bg.bg-do:before {
+    content: '';
+    background-color: rgba(228, 65, 38, 0.27);
+    position: absolute;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    z-index: -1; }
+
+#banner-bottom {
+  margin-bottom: -100px;
+  padding-left: 130px; }
+  #banner-bottom .banner-img {
+    overflow: hidden;
+    display: flex;
+    max-height: 400px;
+    object-fit: cover; }
+
+#blog-1 {
+  padding-top: 150px; }
+
+.bg-xam {
+  background-color: #F5F5F7; }
+
+.blog-post {
+  background: white; }
+  .blog-post:hover {
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05); }
+    .blog-post:hover a {
+      color: #E44126; }
+  .blog-post .blog-post-txt {
+    padding: 20px; }
+    .blog-post .blog-post-txt h5 {
+      color: #636363;
+      font-size: 16px;
+      font-weight: 700; }
+    .blog-post .blog-post-txt .excerpt {
+      min-height: 78px; }
+    .blog-post .blog-post-txt p {
+      font-weight: 400;
+      color: #636363;
+      font-size: 16px; }
+      .blog-post .blog-post-txt p.do {
+        color: #E44126; }
 
 /*# sourceMappingURL=custom.css.map */
