--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -321,6 +321,20 @@ nav {
 }
 
 @media (max-width: 467px) {
+  #banner-bottom {
+    margin-bottom: 0!important;
+    padding-left: 0!important;
+
+    .banner-img {
+      overflow: hidden;
+      max-height: 240px;
+      object-fit: cover;
+    }
+  }
+
+  #blog-1 {
+    padding-top: 0;
+  }
   .img-absolute {
     img {
       position: relative !important;
