--- a/frontend/janami/web/css/custom.css
+++ b/frontend/janami/web/css/custom.css
@@ -203,7 +203,7 @@ nav a {
       object-fit: cover; }
 
   #blog-1 {
-    padding-top: 0; }
+    padding-top: 0 !important; }
 
   .img-absolute img {
     position: relative !important;
