--- a/frontend/usvn/web/usvn/css/custom.scss
+++ b/frontend/usvn/web/usvn/css/custom.scss
@@ -7,6 +7,7 @@
     }
   }
 }
+
 .service__icon {
   overflow: hidden;
   max-height: 260px;
@@ -14,9 +15,11 @@
   justify-content: center;
   align-items: center;
 }
-.portfolio__img{
+
+.portfolio__img {
   max-height: 320px;
 }
+
 .text-1 {
   word-break: break-word;
   overflow: hidden;
@@ -72,10 +75,34 @@
   -webkit-box-orient: vertical;
 }
 
+.gallery {
+  .gallery-item {
+    width: 100%;
+    max-height: 150px;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      display: flex;
+      object-fit: cover;
+    }
+
+    &:hover {
+      box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
+    }
+  }
+}
+
 .service-item .service__content {
   padding: 15px;
-  .service__icon{
-    img{
+
+  .service__icon {
+    img {
       max-height: 115px;
       display: flex;
       object-fit: cover;
