--- a/frontend/usvn/web/usvn/css/custom.css
+++ b/frontend/usvn/web/usvn/css/custom.css
@@ -76,6 +76,14 @@
   /* number of lines to show */
   -webkit-box-orient: vertical; }
 
+.post-item .post__img {
+  max-height: 200px;
+  height: 200px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
 .gallery .gallery-item {
   width: 100%;
   max-height: 150px;
