--- a/frontend/usvn/web/usvn/css/custom.scss
+++ b/frontend/usvn/web/usvn/css/custom.scss
@@ -86,6 +86,7 @@
   }
 }
 
+
 .gallery {
   .gallery-item {
     width: 100%;
@@ -118,5 +119,16 @@
       object-fit: cover;
       overflow: hidden;
     }
+  }
+}
+
+@media (max-width: 467px) {
+
+  .video__btn-wrapper {
+    position: absolute;
+    left: 130px;
+    border: 2px solid #ccc;
+    border-radius: 15px;
+    overflow: hidden;
   }
 }
