--- a/frontend/janami/web/css/custom.scss
+++ b/frontend/janami/web/css/custom.scss
@@ -320,40 +320,6 @@ nav {
   background-blend-mode: overlay;
 }
 
-@media (max-width: 467px) {
-  #banner-bottom {
-    margin-bottom: 0!important;
-    padding-left: 0!important;
-
-    .banner-img {
-      overflow: hidden;
-      max-height: 240px;
-      object-fit: cover;
-    }
-  }
-
-  #blog-1 {
-    padding-top: 0!important;
-  }
-  .img-absolute {
-    img {
-      position: relative !important;
-      width: 100% !important;
-      left: 0 !important;
-    }
-  }
-  .list-item {
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
-    column-count: 2;
-
-    &.column-2 {
-      -webkit-column-count: 2;
-      -moz-column-count: 2;
-      column-count: 2;
-    }
-  }
-}
 
 .product-row {
   .product-title {
@@ -443,6 +409,10 @@ nav {
   margin-left: 10px;
 }
 
+.mb-30 {
+  margin-bottom: 30px;
+}
+
 .align-top {
   align-items: flex-start;
 }
@@ -461,7 +431,7 @@ nav {
 
     &.bg-right {
       &:before {
-        right: 0;
+        right: -5%;
       }
     }
 
@@ -579,6 +549,115 @@ nav {
       &.do {
         color: $color-red;
       }
+    }
+  }
+}
+
+.search-head {
+  position: relative;
+  //min-width: 32px;
+
+  input {
+    width: 0;
+    display: none;
+    transition: 0.5s;
+    padding-left: 32px;
+    margin-top: 18px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+
+    &:focus {
+      box-shadow: unset;
+    }
+
+    &.is_show {
+      transition: 0.5s;
+      display: block;
+      width: 200px;
+    }
+  }
+
+  img {
+    transition: 0.5s;
+    margin-top: 18px;
+    position: relative;
+
+    &.is_show {
+      left: 0;
+      top: 0;
+      position: absolute;
+    }
+  }
+}
+
+.btn-default {
+  border: solid 1px $txt-color;
+  color: $txt-color;
+
+  &:hover {
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
+  }
+}
+
+.order-img-1 {
+  order: 1;
+}
+
+.list-shop {
+  .col-text {
+    height: 100%;
+    align-items: center;
+
+    .content-text {
+      &.margin-left {
+        text-align: left;
+        // max-width: 80%;
+        // float: right;
+        // margin-right: -130px;
+      }
+
+      &.margin-right {
+        // margin-left: -130px;
+        text-align: left;
+        // max-width: 80%;
+      }
+    }
+  }
+
+}
+
+@media (max-width: 467px) {
+  #banner-bottom {
+    margin-bottom: 0 !important;
+    padding-left: 0 !important;
+
+    .banner-img {
+      overflow: hidden;
+      max-height: 240px;
+      object-fit: cover;
+    }
+  }
+
+  #blog-1 {
+    padding-top: 0 !important;
+  }
+  .img-absolute {
+    img {
+      position: relative !important;
+      width: 100% !important;
+      left: 0 !important;
+    }
+  }
+  .list-item {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+
+    &.column-2 {
+      -webkit-column-count: 2;
+      -moz-column-count: 2;
+      column-count: 2;
     }
   }
 }
