--- a/frontend/usvn/web/usvn/css/custom.scss
+++ b/frontend/usvn/web/usvn/css/custom.scss
@@ -122,6 +122,47 @@
   }
 }
 
+.btn-action {
+  border: solid 1px #0e2b3d;
+  padding: 5px;
+  font-size: 12px;
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.blog-grid {
+  padding-top: 50px;
+}
+
+.post-item {
+  border-radius: 20px;
+
+  &.product-item {
+    .post__content {
+      padding: 0;
+
+      .post__title {
+        margin-bottom: 10px;
+      }
+    }
+  }
+}
+
+.banner-layout5 {
+  background-color: rgba(14, 43, 61, 0.5);
+  .counters-light {
+    margin-bottom: 200px;
+    margin-top: 50px;
+  }
+
+  .txt-18 {
+    font-size: 18px;
+    text-align:center;
+  }
+}
+.footer .footer-primary{
+  padding-top:50px;
+}
 @media (max-width: 467px) {
 
   .video__btn-wrapper {
